--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <img class="avatar" src="images/joy.jpg">
             <div >
                 <h3>Joy Napala</h3>
-                <p>Wannabe Frontend Developer</p>
+                <p>Wannabee Frontend Developer</p>
                 <h4>Philippines</h4>
             </div>
         </div>
